--- a/css/style.css
+++ b/css/style.css
@@ -1048,6 +1048,10 @@ a {
             top: 1px;
             content: url(../images/icon-time.svg); }
       .main-games-unit-button {
+        -moz-transition: all ease-in-out 0.3s;
+        -o-transition: all ease-in-out 0.3s;
+        -webkit-transition: all ease-in-out 0.3s;
+        transition: all ease-in-out 0.3s;
         line-height: 54px;
         width: 181px;
         height: 54px;
@@ -1528,27 +1532,33 @@ a {
         opacity: .9;
         padding-right: 30px;
         margin-bottom: 67px; }
-      .test-content-unit_result-timer-title {
-        font-family: 'GraublauSlab-Bold';
-        font-size: 30px;
-        line-height: 35px;
-        margin-bottom: 10px; }
-      .test-content-unit_result-timer-unit {
-        text-align: center; }
-        .test-content-unit_result-timer-unit-title {
-          font-family: 'GraublauSansDisplay-Bold';
-          font-size: 14px;
-          line-height: 23px; }
-        .test-content-unit_result-timer-unit-number {
-          font-family: 'GraublauSlab-HeavyItalic';
-          font-size: 120px;
-          line-height: 49px; }
-        .test-content-unit_result-timer-unit_divider {
-          margin: 0 5px;
-          font-family: 'GraublauSansDisplay-Bold';
-          font-size: 90px;
-          line-height: 105px; }
-      .test-content-unit_result-timer-wrap {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex; }
+      .test-content-unit_result-timer {
+        padding-bottom: 20px; }
+        .test-content-unit_result-timer-title {
+          font-family: 'GraublauSlab-Bold';
+          font-size: 30px;
+          line-height: 35px;
+          margin-bottom: 10px; }
+        .test-content-unit_result-timer-unit {
+          text-align: center; }
+          .test-content-unit_result-timer-unit-title {
+            font-family: 'GraublauSansDisplay-Bold';
+            font-size: 14px;
+            line-height: 23px;
+            margin-bottom: 10px; }
+          .test-content-unit_result-timer-unit-number {
+            font-family: 'GraublauSlab-HeavyItalic';
+            font-size: 120px;
+            line-height: 49px; }
+          .test-content-unit_result-timer-unit_divider {
+            margin: 0 5px;
+            font-family: 'GraublauSansDisplay-Bold';
+            font-size: 90px;
+            line-height: 115px;
+            opacity: 1; }
+            .test-content-unit_result-timer-unit_divider_hide {
+              opacity: 0; }
+        .test-content-unit_result-timer-wrap {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
