--- a/css/style.scss
+++ b/css/style.scss
@@ -289,12 +289,26 @@ input[type=submit], input[type=button] {
 		margin-bottom: 43px;
 	}
 	&-select{
+		//@include transition(.3s);
 		border-bottom:1px solid #fff;
 		width:300px;
 		margin:0 auto;
 		margin-bottom: 68px;
+		.select2-selection__placeholder{
+			//@include transition(.3s);
+		}
+
 		.select2-container{
 			width:100%!important;
+		}
+		&_error{
+			border-bottom:1px solid #E8244C;
+			.select2-selection__placeholder{
+				color:#E8244C!important;
+			}
+			.select2-selection__arrow{
+		    background-image: url(../images/icon-dropdown-arrow_red.svg);
+		}
 		}
 	}
 	&-games{
@@ -371,7 +385,7 @@ input[type=submit], input[type=button] {
 			}
 			&_disabled{
 				.main-games-unit-button{
-					pointer-events:none;
+					//pointer-events:none;
 					box-shadow:none;
 					background-color: #F5F5F5;
 					color:#929090;
