--- a/jade/test.jade
+++ b/jade/test.jade
@@ -2,9 +2,13 @@ include ./includes/components.jade
 
 doctype html
 html
-	+head ('Test')
+	+head ('Онлайн игра! «Мозгва» для Backer Hughes')
 
 	body
+		<!-- Google Tag Manager (noscript) -->
+		noscript
+			iframe(src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ" height="0" width="0" style="display:none;visibility:hidden")
+		<!-- End Google Tag Manager (noscript) -->
 		.test
 			.container
 				.test-header
@@ -21,7 +25,7 @@ html
 						img(src="images/filler-05.png").test-filler.test-filler-04
 						img(src="images/filler-06.png").test-filler.test-filler-05
 						.test-info
-							.test-info-unit.test-info-unit_date 16 Октября
+							.test-info-unit.test-info-unit_date 22 Октября
 							.test-info-unit.test-info-unit_time 20:00
 							.test-info-text Игра произойдет здесь, по московскому времени. Отправьте нам свои контактные данные, и мы вам напомним о начале игры.
 							.test-info-button.button.register.button_orange Зарегистрироваться
@@ -46,8 +50,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct Еще какая! Потому что серебро — это Argentum, а это уже Аргентина.
+											.test-content-unit-bottom-results-text-inner_wrong Ну нет же, это Аргентина, потому что Argentum - это серебро.
 							.test-content-unit
 								.test-content-unit-question.test-content-unit-question_size2 Название какого музыкального жанра, по одной из версий, появилось благодаря английскому эквиваленту выражения «тоска зеленая»?
 								.test-content-unit-bottom
@@ -59,8 +63,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct О, да. Это тоскливый и лирический блюз, как раз для осени!
+											.test-content-unit-bottom-results-text-inner_wrong Да нет, если “тоска зеленая”, то это сразу блюз. Хотя для некоторых это может быть опера , но это блюз.
 							.test-content-unit
 								.test-content-unit-question.test-content-unit-question_size3 На последней странице Книги Рекордов Гиннеса мелким шрифтом указано, что все мировые рекорды принадлежат этому человеку, а в книге просто перечислены те люди, которым удалось максимально к ним приблизиться. О каком актере шутка?
 								.test-content-unit-bottom
@@ -72,8 +76,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct Конечно что же это Чак наш дорогой Норрис, все поклоны книге только ему.
+											.test-content-unit-bottom-results-text-inner_wrong Зря вы не ответили Чак Норрис, потому что это правильный ответ. Теперь каждый сам за себя!
 							.test-content-unit
 								.test-content-unit-question.test-content-unit-question_size1 Как на сленге шахтеров называют бурильный станок БП-100?
 								.test-content-unit-bottom
@@ -85,8 +89,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct Баптист это,  конечно. Хотя другие варианты тоже веселые
+											.test-content-unit-bottom-results-text-inner_wrong А вы точно из нефтепромышленности? Потому что это не Столичная или Борис Петрович, а Баптист. Так -то!
 							.test-content-unit
 								.test-content-unit-question.test-content-unit-question_size4 «Мы восстановили порядок в мире и спасли Олимпийские игры в Сочи». Пост с таким заголовком в 2013 году опубликовала в Facebook известная компания,  поместив на обложку своей группы фото «спасения игр». Санкций за использование олимпийских символов со стороны оргкомитета не последовало. Какой бренд «спас» игры?
 								.test-content-unit-bottom
@@ -98,8 +102,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct Верно, это «Zippo» с их зажигалками и с нашим факелом. В самом деле спасли!
+											.test-content-unit-bottom-results-text-inner_wrong Это все весело, но нет. Факел потух, а «Zippo» его зажгли.
 							.test-content-unit.test-content-unit_final
 								.test-content-unit-question.test-content-unit-question_size1 Что Юрий Лоза не возьмет с собой прежде, чем тихо уплыть на маленьком плоту? 
 								.test-content-unit-bottom
@@ -111,8 +115,8 @@ html
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
 										.test-content-unit-bottom-results-text 
-											.test-content-unit-bottom-results-text-inner_correct Конечно, Аргентина! Вы абсолютно правы!
-											.test-content-unit-bottom-results-text-inner_wrong Нет. правильный ответ - Аргентина.
+											.test-content-unit-bottom-results-text-inner_correct Признавайтесь, вы - Лозафан, потому что это правильный ответ и кому нужны слезы на маленьком плоту!
+											.test-content-unit-bottom-results-text-inner_wrong Так себе вы знаете хит тысячелетия, но теперь эта песня будет с вами весь день. Поздравляем! А правильный ответ - слезы.
 							.test-content-unit.test-content-unit_result
 								.test-content-unit_result-title Вы — молодец! У вас все шансы занять неплохое место на зачетной игре. Мы Вам напомним о ней.
 								.test-content-unit_result-timer
@@ -129,7 +133,7 @@ html
 										.test-content-unit_result-timer-unit.test-content-unit_result-timer-unit_minutes
 											.test-content-unit_result-timer-unit-title М
 											.test-content-unit_result-timer-unit-number 45
-		.popup
+		.popup.popup_form
 			.popup-wrap
 				.popup-title Регистрация на игру
 				.popup-close
@@ -140,4 +144,7 @@ html
 					input#inputMaskPhone(type="phone" name="contactPhone"  placeholder="Телефон" required)
 					input(type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required)
 					input(type="submit" value="Дальше").button.button_orange.popup-form-submit
+		.popup.popup_finish
+			.popup-wrap
+				.popup-title Спасибо за регистрацию!
 
