Изменения для публикации

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,7 +2,7 @@ include ./includes/components.jade
 
 doctype html
 html
-	+head ('Интеллектуальная олимпиада - «Мозгва» для Backer Hughes')
+	+head ('Интеллектуальная олимпиада - «Мозгва» для Baker Hughes')
 
 	body
 		<!-- Google Tag Manager (noscript) -->
@@ -14,13 +14,13 @@ html
 		.main
 			.container
 				.main-title
-					img(src="images/title.svg" alt="").main-title-img
+					img(src="images/title-new.svg" alt="").main-title-img
 					img(src="images/filler-01.png" alt="").filler.filler-01
 					img(src="images/filler-02.png" alt="").filler.filler-02
 					img(src="images/filler-03.png" alt="").filler.filler-03
 					img(src="images/filler-04.png" alt="").filler.filler-04
 					img(src="images/filler-05.png" alt="").filler.filler-05
-					
+
 				.main-select.select-wrap
 					select(name="select city")
 						option
@@ -34,22 +34,22 @@ html
 					.main-games-month Октябрь
 					.main-games-wrap
 						.main-games-unit.main-games-unit_disabled(data-city="Тюмень")
-							.main-games-unit-date 18
+							.main-games-unit-date 17
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Тюмень
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Москва")
-							.main-games-unit-date 18
+							.main-games-unit-date 17
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Москва
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Нижневартовск")
 							.main-games-unit-date 25
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Нижневартовск
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 					.main-games-month Ноябрь
 					.main-games-wrap
@@ -57,19 +57,19 @@ html
 							.main-games-unit-date 1
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Нефтеюганск
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Ноябрьск")
 							.main-games-unit-date 8
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Ноябрьск
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Сахалин")
 							.main-games-unit-date 8
 							.main-games-unit-info
 								.main-games-unit-info-unit.main-games-unit-info-unit_place Сахалин
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 20:00
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 
 				.main-info
@@ -101,5 +101,3 @@ html
 		.popup.popup_finish
 			.popup-wrap
 				.popup-title Спасибо за регистрацию!
-		
-
