--- a/jade/test.jade
+++ b/jade/test.jade
@@ -13,9 +13,9 @@ html
 			.container
 				.test-header
 					.header-logo-wrap
-						a(href="#/").header-logo.header-logo_01
+						a(href="../").header-logo.header-logo_01
 							img(src="images/bh-logo_alt.svg" alt="")
-						a(href="#/").header-logo.header-logo_02
+						a(href="https://mozgva.com").header-logo.header-logo_02
 							img(src="images/mzgv-logo.svg" alt="")
 				.test-body-wrap
 					.test-body
@@ -49,7 +49,7 @@ html
 										.test-content-unit-bottom-answers-unit Республика Кипр
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct Еще какая! Потому что серебро — это Argentum, а это уже Аргентина.
 											.test-content-unit-bottom-results-text-inner_wrong Ну нет же, это Аргентина, потому что Argentum - это серебро.
 							.test-content-unit
@@ -62,7 +62,7 @@ html
 										.test-content-unit-bottom-answers-unit Вальс
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct О, да. Это тоскливый и лирический блюз, как раз для осени!
 											.test-content-unit-bottom-results-text-inner_wrong Да нет, если “тоска зеленая”, то это сразу блюз. Хотя для некоторых это может быть опера , но это блюз.
 							.test-content-unit
@@ -75,7 +75,7 @@ html
 										.test-content-unit-bottom-answers-unit Стив Бушеми
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct Конечно что же это Чак наш дорогой Норрис, все поклоны книге только ему.
 											.test-content-unit-bottom-results-text-inner_wrong Зря вы не ответили Чак Норрис, потому что это правильный ответ. Теперь каждый сам за себя!
 							.test-content-unit
@@ -88,7 +88,7 @@ html
 										.test-content-unit-bottom-answers-unit.test-content-unit-bottom-answers-unit_correct Баптист
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct Баптист это,  конечно. Хотя другие варианты тоже веселые
 											.test-content-unit-bottom-results-text-inner_wrong А вы точно из нефтепромышленности? Потому что это не Столичная или Борис Петрович, а Баптист. Так -то!
 							.test-content-unit
@@ -101,11 +101,11 @@ html
 										.test-content-unit-bottom-answers-unit «Касперский»
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct Верно, это «Zippo» с их зажигалками и с нашим факелом. В самом деле спасли!
 											.test-content-unit-bottom-results-text-inner_wrong Это все весело, но нет. Факел потух, а «Zippo» его зажгли.
 							.test-content-unit.test-content-unit_final
-								.test-content-unit-question.test-content-unit-question_size1 Что Юрий Лоза не возьмет с собой прежде, чем тихо уплыть на маленьком плоту? 
+								.test-content-unit-question.test-content-unit-question_size1 Что Юрий Лоза не возьмет с собой прежде, чем тихо уплыть на маленьком плоту?
 								.test-content-unit-bottom
 									.test-content-unit-bottom-answers
 										.test-content-unit-bottom-answers-unit.test-content-unit-bottom-answers-unit_correct Слезы
@@ -114,7 +114,7 @@ html
 										.test-content-unit-bottom-answers-unit Сны
 									.test-content-unit-bottom-results
 										.test-content-unit-bottom-results-button Следующий вопрос!
-										.test-content-unit-bottom-results-text 
+										.test-content-unit-bottom-results-text
 											.test-content-unit-bottom-results-text-inner_correct Признавайтесь, вы - Лозафан, потому что это правильный ответ и кому нужны слезы на маленьком плоту!
 											.test-content-unit-bottom-results-text-inner_wrong Так себе вы знаете хит тысячелетия, но теперь эта песня будет с вами весь день. Поздравляем! А правильный ответ - слезы.
 							.test-content-unit.test-content-unit_result
@@ -147,4 +147,3 @@ html
 		.popup.popup_finish
 			.popup-wrap
 				.popup-title Спасибо за регистрацию!
-
