--- a/jade/includes/components.jade
+++ b/jade/includes/components.jade
@@ -7,7 +7,7 @@ mixin header
 				.header-logo-wrap
 					a(href="/").header-logo.header-logo_01
 						img(src="images/bh-logo.svg" alt="")
-					a(href="/").header-logo.header-logo_02
+					a(href="https://mozgva.com").header-logo.header-logo_02
 						img(src="images/mzgv-logo.svg" alt="")
 				.header-title Интеллектуальная олимпиада
 				a(href="/test.html").button.button_orange.header-button Не смогу участвовать
