--- a/jade/includes/components.jade
+++ b/jade/includes/components.jade
@@ -35,4 +35,4 @@ mixin head(title)
 		script(type="text/javascript" src="js/scripts.js")
 		meta(property="og:title" content="«Мозгва» для Backer Hughes")
 		meta(property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете")
-		meta(property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min")
+		meta(property="og:image" content="http://baker-hughes.mozgva.ru/images/Frame.png")
